--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@sermons/reveal-skel",
-  "repository": "sermons/reveal-skel",
-  "description": "A template for Reveal.js-based presentations",
+  "name": "@sermons/turn",
+  "repository": "sermons/turn",
+  "description": "Is30:15-22 Turn (1/3)",
   "keywords": [
     "slides",
-    "lectures",
+    "sermon",
     "talks",
-    "ppt"
+    "soar"
   ],
   "version": "1.5.1",
   "author": "Sean Ho <seanho@seanho.com> (http://seanho.com)",
   "config": {
-    "pretty_url": "reveal-skel.seanho.com",
-    "cname": "reveal-skel.seanho.com",
+    "pretty_url": "turn.seanho.com",
+    "cname": "turn.seanho.com",
     "multiplex": {
       "url": "https://mp.seanho.com:8443/",
       "id": "22bc761ffc97809b"
@@ -23,14 +23,14 @@
     },
     "history": [
       {
-        "venue": "Venue of talk",
-        "city": "Location",
-        "date": "2000-01-01",
+        "venue": "Evangelical Chinese Bible Church",
+        "city": "Coquitlam",
+        "date": "2017-08-22",
         "duration": 0
       }
     ],
     "slides": [
-      "slides/sample.md"
+      "slides/slides.md"
     ],
     "css": [
       {
