--- a/package.json
+++ b/package.json
@@ -27,6 +27,18 @@
         "city": "Coquitlam",
         "date": "2017-08-22",
         "duration": 0
+      },
+      {
+        "venue": "First Chinese NA Baptist Church",
+        "city": "Vancouver",
+        "date": "2016-05-01",
+        "duration": 0
+      },
+      {
+        "venue": "Bethel Chinese MB Church",
+        "city": "Vancouver",
+        "date": "2016-05-01",
+        "duration": 0
       }
     ],
     "slides": [
